# src/Infra/Swagger/schemas/request/fight/create.php
@@ -1,0 +1,25 @@
+<?php
+
+/**
+ * @OA\Schema(
+ *   schema="CreateFightRequest",
+ *   title="CreateFightRequest",
+ *   required={"name", "role"},
+ *
+ *   @OA\Property(
+ *     property="character1",
+ *     type="string",
+ *     description="ID do personagem 1"
+ *   ),
+ *
+ *   @OA\Property(
+ *     property="character2",
+ *     type="string",
+ *     description="ID do personagem 2"
+ *   ),
+ * )
+ */
+
+
+
+
